修复pack.mcmeta的格式错误